# tiny-tools

./: .gitignore  Cargo.toml  flake.nix  justfile
src/: lib.rs  macro.rs  tiny_macros.rs
