[package]
name = "tiny-tools"
version = "0.1.5"
edition = "2021"

license = "GPL-3.0-or-later"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
categories = ["development-tools"]
description = "a tiny collection of helper utils"
homepage = "https://github.com/abhi-xyz/tiny-tools"
repository = "https://github.com/abhi-xyz/tiny-tools"
keywords = ["development-tools"]
# readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }


[features]
default = []
debug = []

[dependencies]
