[package]
name = "tiny-tools"
version = "0.1.5"
edition = "2021"

license = "GPL-3.0-or-later"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
categories = ["development-tools"]
description = "a tiny collection of helper utils"
homepage = "https://github.com/abhi-xyz/tiny-tools"
repository = "https://github.com/abhi-xyz/tiny-tools"
keywords = ["development-tools"]
# readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }


[features]
default = []
debug = []

[dependencies]
chrono = "0.4.39"
dirs = "5.0.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
